--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -18,8 +18,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-core</artifactId>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>${solr_version}</version>
         </dependency>
         <dependency>
             <groupId>com.vividsolutions</groupId>
